--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dependencies:
   flutter_google_places: ^0.2.0
   google_maps_flutter: ^0.0.3+3
   flutter_local_notifications: ^0.5.2
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+  image_path: "icons/geodropin_icon.png"
+  android: trur
+  ios: true
+
 
 dev_dependencies:
   flutter_test:
@@ -37,16 +44,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
