--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   geolocator: ^3.0.0
   path_provider: '>=0.3.0'
   flutter_google_places: ^0.2.0
-  google_maps_flutter: ^0.0.3+3
+  google_maps_flutter: ^0.4.0
   flutter_local_notifications: ^0.5.2
   flutter_launcher_icons: "^0.7.0"
 
