--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
 
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDvmLJuWX_FeciVc-4-JBWEb7prKXmOlTU"/>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-2629585729370619~4856523827"/>
         <uses-library android:name="org.apache.http.legacy" />
         <activity
             android:name=".MainActivity"
